<resources>
    <string name="app_name">Celluloid</string>
    <string name="app_version">v1.0</string>
    <string name="app_author">by E.Bystrov</string>

    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_sign_in">Sign in</string>
    <string name="prompt_sign_up">Sign up</string>
    <string name="wrong_password">Wrong password</string>

    <string name="navigation_drawer_open">Open navigation</string>
    <string name="navigation_drawer_close">Close navigation</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="welcome">Welcome, %1$s!</string>

    <string name="menu_films">Films</string>
    <string name="menu_starred">Starred</string>
    <string name="menu_about">About</string>
    <string name="poster_image_description">Film poster</string>
    <string name="poster_star_on">Star this film</string>
    <string name="poster_star_off">Unstar this film</string>
    <string name="starring_format">Starring: %s</string>
    <string name="genre_format">Genre: %s</string>
    <string name="year_format">Year: %s</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password_mismatch">Different passwords</string>
    <string name="username_taken">Username taken</string>
    <string name="open_poster">More info</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>